# evolution-mapi

./: .gitlab-ci.yml  AUTHORS  CMakeLists.txt  ChangeLog  MAINTAINERS  Makefile.am  NEWS  README  autogen.sh  config.h.in  configure.ac  configure.in  evolution-mapi.doap  evolution-mapi.metainfo.xml.in  org.gnome.Evolution-mapi.metainfo.xml.in
po/: ChangeLog  LINGUAS  POTFILES.in  as.po  ast.po  bg.po  bn.po  bn_IN.po  bs.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  el.po  en@shaw.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  id.po  it.po  ja.po  ka.po  kn.po  ko.po  lt.po  lv.po  mai.po  ml.po  (+28 more)
src/: CMakeLists.txt  Makefile.am
src/account-setup-eplugin/: ChangeLog  Makefile.am  e-mapi-account-listener.c  e-mapi-account-listener.h  e-mapi-account-settings.c  e-mapi-account-setup.c  e-mapi-account-setup.h  e-mapi-edit-folder-permissions.c  e-mapi-edit-folder-permissions.h  e-mapi-search-gal-user.c  e-mapi-search-gal-user.h  e-mapi-subscribe-foreign-folder.c  exchange-mapi-account-listener.c  exchange-mapi-account-listener.h  exchange-mapi-account-settings.c  exchange-mapi-account-setup.c  exchange-mapi-account-setup.h  org-gnome-exchange-mapi.eplug.xml
src/addressbook/: CMakeLists.txt  ChangeLog  Makefile.am  e-book-backend-mapi-contacts.c  e-book-backend-mapi-contacts.h  e-book-backend-mapi-factory.c  e-book-backend-mapi-gal-factory.c  e-book-backend-mapi-gal.c  e-book-backend-mapi-gal.h  e-book-backend-mapi-utils.c  e-book-backend-mapi-utils.h  e-book-backend-mapi.c  e-book-backend-mapi.h
src/calendar/: CMakeLists.txt  ChangeLog  Makefile.am  e-cal-backend-mapi-factory.c  e-cal-backend-mapi-factory.h  e-cal-backend-mapi.c  e-cal-backend-mapi.h
src/camel/: CMakeLists.txt  ChangeLog  Makefile.am  camel-mapi-folder-summary.c  camel-mapi-folder-summary.h  camel-mapi-folder.c  camel-mapi-folder.h  camel-mapi-message-info.c  camel-mapi-message-info.h  camel-mapi-notifications.c  camel-mapi-notifications.h  camel-mapi-private.h  camel-mapi-provider.c  camel-mapi-sasl-krb.c  camel-mapi-sasl-krb.h  camel-mapi-store-summary.c  camel-mapi-store-summary.h  camel-mapi-store.c  camel-mapi-store.h  camel-mapi-summary.c  camel-mapi-summary.h  camel-mapi-transport.c  camel-mapi-transport.h  camel-mapi-utils.c  camel-mapi-utils.h  camel-private.h
src/collection/: CMakeLists.txt  Makefile.am  e-mapi-backend-authenticator.c  e-mapi-backend-authenticator.h  e-mapi-backend-factory.c  e-mapi-backend-factory.h  e-mapi-backend.c  e-mapi-backend.h  module-mapi-backend.c
src/configuration/: CMakeLists.txt  Makefile.am  e-book-config-mapi.c  e-book-config-mapi.h  e-book-config-mapigal.c  e-book-config-mapigal.h  e-cal-config-mapi.c  e-cal-config-mapi.h  e-mail-config-mapi-backend.c  e-mail-config-mapi-backend.h  e-mail-config-mapi-extension.c  e-mail-config-mapi-extension.h  e-mail-config-mapi-offline-options.c  e-mail-config-mapi-offline-options.h  e-mail-config-mapi-page.c  e-mail-config-mapi-page.h  e-mapi-config-ui-extension.c  e-mapi-config-ui-extension.h  e-mapi-config-utils.c  e-mapi-config-utils.h  e-mapi-edit-folder-permissions.c  e-mapi-edit-folder-permissions.h  e-mapi-search-gal-user.c  e-mapi-search-gal-user.h  e-mapi-subscribe-foreign-folder.c  e-mapi-subscribe-foreign-folder.h  module-mapi-configuration.c
src/libexchangemapi/: CMakeLists.txt  ChangeLog  Makefile.am  camel-mapi-settings.c  camel-mapi-settings.h  e-mapi-book-utils.c  e-mapi-book-utils.h  e-mapi-cal-recur-utils.c  e-mapi-cal-recur-utils.h  e-mapi-cal-tz-utils.c  e-mapi-cal-tz-utils.h  e-mapi-cal-utils.c  e-mapi-cal-utils.h  e-mapi-connection.c  e-mapi-connection.h  e-mapi-debug.c  e-mapi-debug.h  e-mapi-defs.h  e-mapi-fast-transfer.c  e-mapi-fast-transfer.h  e-mapi-folder.c  e-mapi-folder.h  e-mapi-mail-utils.c  e-mapi-mail-utils.h  e-mapi-openchange.c  e-mapi-openchange.h  e-mapi-operation-queue.c  e-mapi-operation-queue.h  e-mapi-utils.c  e-mapi-utils.h  e-source-mapi-folder.c  e-source-mapi-folder.h  em-operation-queue.c  em-operation-queue.h  exchange-mapi-cal-recur-utils.c  exchange-mapi-cal-recur-utils.h  exchange-mapi-cal-tz-utils.c  exchange-mapi-cal-tz-utils.h  exchange-mapi-cal-utils.c  exchange-mapi-cal-utils.h  (+14 more)
