SUBDIRS = src po
DIST_SUBDIRS= src po

EXTRA_DIST = 			\
	ChangeLog		\
	intltool-merge.in	\
	intltool-update.in	\
	intltool-extract.in	

CLEANFILES = 	intltool-merge	\
		intltool-update	\
		intltool-extract	

MAINTAINERCLEANFILES =					\
	$(srcdir)/aclocal.m4				\
	$(srcdir)/config.guess				\
	$(srcdir)/config.h.in				\
	$(srcdir)/config.sub				\
	$(srcdir)/depcomp				\
	$(srcdir)/gtk-doc.make				\
	$(srcdir)/install-sh				\
	$(srcdir)/ltmain.sh				\
	$(srcdir)/missing				\
	$(srcdir)/mkinstalldirs

-include $(top_srcdir)/git.mk
