# Simple configuration script for openchange evolution plugin
# Written by Julien Kerihuel <j.kerihuel@openchange.org>
# Modified for GNOME Evolution MAPI Provider by Johnny Jacob <jjohnny@novell.com>

AC_PREREQ(2.57)
AC_INIT(evolution-mapi, 0.1, http://go-evolution.org/MAPIProvider, evolution-mapi)
AC_CONFIG_SRCDIR(README)

AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)

AC_CONFIG_HEADER([config.h])
AC_DEFINE(_GNU_SOURCE, 1, [Use GNU extensions])
AC_PROG_CC

AC_PROG_INTLTOOL([0.35.5])

dnl I18N stuff
AM_GLIB_GNU_GETTEXT

GETTEXT_PACKAGE=evolution-mapi
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE", [Package name for gettext])

localedir='$(prefix)/$(DATADIRNAME)/locale'
AC_SUBST(localedir)

dnl Initialize libtool
AC_PROG_LIBTOOL

PKG_PROG_PKG_CONFIG

dnl ****************************
dnl Check for evolution plugins 
dnl ****************************

AC_ARG_WITH(evolution, [  --evolution=[version] Use Evolution version.],
			evolution_version="$withval", evolution_version="2.12")	

AC_ARG_WITH(evolution-camelprovider, [  --evolution-camel=[version] Use Evolution Camel Provider version.],
				   evolution_camel_version="$withval", evolution_camel_version="1.2" )

PKG_CHECK_MODULES(EVOLUTION_DATA_SERVER, evolution-data-server-${evolution_camel_version})
PKG_CHECK_MODULES(EVOLUTION_PLUGIN, evolution-plugin)

PKG_CHECK_MODULES(LIBEDATASERVER, libedataserver-${evolution_camel_version})
PKG_CHECK_MODULES(LIBEBACKEND, libebackend-${evolution_camel_version})

PKG_CHECK_MODULES(LIBECAL, libecal-${evolution_camel_version})
PKG_CHECK_MODULES(LIBEDATACAL, libedata-cal-${evolution_camel_version})

PKG_CHECK_MODULES(LIBBOOK, libebook-${evolution_camel_version})
PKG_CHECK_MODULES(LIBEDATABOOK, libedata-book-${evolution_camel_version})

PKG_CHECK_MODULES(CAMEL, camel-provider-${evolution_camel_version})

dnl TODO : Version check. 
PKG_CHECK_MODULES(LIBMAPI, libmapi)
PKG_CHECK_MODULES(GCONF2, gconf-2.0)

AC_PATH_PROG(GCONFTOOL, gconftool-2, no)
AM_GCONF_SOURCE_2

API_VERSION=${evolution_camel_version}
AC_SUBST(API_VERSION)

BASE_VERSION=`pkg-config --variable=execversion evolution-shell`
AC_SUBST(BASE_VERSION)

GETTEXT_PACKAGE=evolution
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE", [Package Name for Gettext])

dnl Add evolution plugin rules here
EVO_PLUGIN_RULE=$srcdir/eplugin-rule.mk
AC_SUBST_FILE(EVO_PLUGIN_RULE)

EVOLUTION_PLUGIN="evolution-plugin"
AC_SUBST(EVOLUTION_PLUGIN)

EVOLUTION_CAMEL="evolution-camel"
AC_SUBST(EVOLUTION_CAMEL)

EVOLUTION_CALENDAR="evolution-calendar"
AC_SUBST(EVOLUTION_CALENDAR)

EVOLUTION_EBOOK="evolution-ebook"
AC_SUBST(EVOLUTION_EBOOK)

EVOLUTION_PLUGIN_INSTALL="evolution-plugin-install"
AC_SUBST(EVOLUTION_PLUGIN_INSTALL)

EVOLUTION_CAMEL_INSTALL="evolution-camel-install"
AC_SUBST(EVOLUTION_CAMEL_INSTALL)

EVOLUTION_CALENDAR_INSTALL="evolution-calendar-install"
AC_SUBST(EVOLUTION_CALENDAR_INSTALL)

EVOLUTION_EBOOK_INSTALL="evolution-ebook-install"
AC_SUBST(EVOLUTION_EBOOK_INSTALL)

EVOLUTION_PLUGIN_UNINSTALL="evolution-plugin-uninstall"
AC_SUBST(EVOLUTION_PLUGIN_UNINSTALL)

EVOLUTION_CAMEL_UNINSTALL="evolution-camel-uninstall"
AC_SUBST(EVOLUTION_CAMEL_UNINSTALL)

EVOLUTION_CALENDAR_UNINSTALL="evolution-calendar-uninstall"
AC_SUBST(EVOLUTION_CALENDAR_UNINSTALL)

EVOLUTION_EBOOK_UNINSTALL="evolution-ebook-uninstall"
AC_SUBST(EVOLUTION_EBOOK_UNINSTALL)

plugindir=`$PKG_CONFIG --variable=plugindir evolution-plugin`
AC_SUBST(plugindir)

camel_providerdir=`$PKG_CONFIG --variable=camel_providerdir camel-provider-${evolution_camel_version}`
AC_SUBST(camel_providerdir)

extensiondir=`$PKG_CONFIG --variable=extensiondir evolution-data-server-${evolution_camel_version}`
AC_SUBST(extensiondir)

libmapi_ldif_dir=`$PKG_CONFIG --variable=libdir libmapi`/openchange/setup
AC_SUBST(libmapi_ldif_dir)

eds_privdatadir=`$PKG_CONFIG --variable=privdatadir evolution-data-server-${evolution_camel_version}`
AC_SUBST(eds_privdatadir)

edataserver_privincludedir=`$PKG_CONFIG --variable=privincludedir libedataserver-${evolution_camel_version}`
AC_SUBST(edataserver_privincludedir)

mapidatadir="$eds_privdatadir/mapi"
AC_SUBST(mapidatadir)

dnl ***********************
dnl Makefiles 
dnl ***********************

AC_CONFIG_FILES([Makefile 
src/Makefile
src/libexchangemapi/Makefile
src/calendar/Makefile
src/addressbook/Makefile
src/camel/Makefile
src/account-setup-eplugin/Makefile
po/Makefile.in
])
AC_OUTPUT